--- a/src/app.css
+++ b/src/app.css
@@ -1,43 +1,71 @@
-body {
-  font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial,
-    'Lucida Grande', sans-serif;
-  font-weight: 300;
-  font-size: 16px;
-  margin: 0;
-  padding: 0;
+*{
+  box-sizing: border-box;
 }
-
-a {
-  text-decoration: none;
-  color: #108db8;
-  font-weight: bold;
+body{
+  background: #f2efeb;
 }
-
-img {
+.page-wrapper{
+  display: flex;
+  flex-direction: column-reverse;
+  min-height: 95vh;
+  justify-content: flex-end;
+}
+main.home{
+  display: flex;
+  flex-direction: column;
+  max-width: 100vw;
+}
+.img-row{
+  display: flex;
+  flex-direction: row;
+  max-width: 100vw;
+  padding: 3vw;
+}
+.img-wrapper{
+  flex: 1 1 59.5%;
+}
+.img-wrapper:first-child{
+  margin-right: 3vw;
+}
+.img-wrapper:last-child{
+  flex: 1 1 40.5%
+}
+.img-row img{
   max-width: 100%;
+  /* border: 1px solid #b9a895; */
 }
-
-nav {
-  width: 100%;
-  background: #108db8;
+header{
+  margin-top: auto;
+  display: flex;
+  flex-direction: row;
+  padding: 3vw;
+  padding-bottom: 0px;
 }
-
-nav a {
-  color: white;
-  padding: 1rem;
-  display: inline-block;
+header .logo{
+  width: 40vw;
+  height: 13vw;
+  margin-right: auto;
 }
-
-.content {
-  padding: 1rem;
+.content{
+  margin-top: auto;
 }
-.image {
-  width: 25%;
-  min-width: 250px;
-  height: auto;
+header nav{
+  display: flex;
+  flex-direction: row;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-right: auto;
+  padding-left: 5vw;
 }
-
-.blog-post {
- display: flex;
- flex-direction: column;
+header nav a{
+  font-family: 'Playfair Display', serif;
+  font-size: 3vw;
+  margin: 1vw;
+  color: #514333;
+  text-decoration: none;
+  /* font-weight: 400; */
+}
+header nav a:last-child{
+  margin-right: 0px;
 }
